<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
	<RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="41dp"
			android:text="@string/email"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView1"
			android:layout_marginTop="90dp"
			android:text="@string/password"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/loginEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView1"
			android:layout_marginTop="16dp"
			android:ems="10"
			android:inputType="textEmailAddress" >

			<requestFocus />
		</EditText>

		<EditText
			android:id="@+id/loginPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView2"
			android:layout_marginTop="41dp"
			android:ems="10"
			android:inputType="textPassword" />

		<TextView
			android:id="@+id/txtNoacc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/btnLogin"
			android:layout_marginLeft="24dp"
			android:layout_marginTop="46dp"
			android:text="@string/donthaveacc"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="17sp" />

		<TextView
			android:id="@+id/tvLinkToRegisterScreen"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/txtNoacc"
			android:layout_alignBottom="@+id/txtNoacc"
			android:layout_toRightOf="@+id/txtNoacc"
			android:text="@string/signup"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/purple"
			android:textSize="17sp" />

		<Button
			android:id="@+id/btnLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/txtNoacc"
			android:layout_alignRight="@+id/textView2"
			android:layout_below="@+id/loginPassword"
			android:layout_marginTop="36dp"
			android:background="@color/purple"
			android:text="@string/login" />

		<Button
			android:id="@+id/btnforgot"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/btnLogin"
			android:layout_alignBottom="@+id/btnLogin"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_toRightOf="@+id/btnLogin"
			android:background="@color/purple"
			android:text="@string/forgotpwd" />

	</RelativeLayout>
</ScrollView>	